--- a/localisation/KR_Ottoman_l_english.yml
+++ b/localisation/KR_Ottoman_l_english.yml
@@ -604,3 +604,404 @@ ott.77.a:0 "Praise be to God!"
 ott.78.t:0 "Integration of the Suez Canal"
 ott.78.d:0 "The civilian population of the Suez Canal have finally submitted to Ottoman rule and the Suez Canal is finally under our firm and complete control."
 ott.78.a:0 "Praise be to God!"
+
+ott.79.t:0 "Ottomans request Aircraft Designs"
+ott.79.d:0 "Our old ally, The Ottoman Empire, wants to buy military aircraft designs from German companies. Several aircraft manufacturers have notified us because German law states that the sale of weapons to foreign buyers must be approved by the government first. Shall we allow our companies to sell aircraft blueprints to the Turks?"
+ott.79.a:0 "Very well, you may sell them some old designs"
+ott.79.b:0 "No, we do not give away industrial secrets"
+
+ott.80.t:0 "German Air Designs"
+ott.80.d:0 "The Germans have approved the deal! It was not cheap, but we finally possess the necessary technical information to design our own modern aircraft."
+ott.80.a:0 "To the skies!"
+
+ott.81.t:0 "German Air Designs"
+ott.81.d:0 "The German government has refused the deal! Even though we reached an agreement with the aircraft manufacturers, the barbaric German government refused to allow the trade. This is an unexpected setback for our air program."
+ott.81.a:0 "We don't need their flying trashcans anyway..."
+
+ott.82.t:0 "Black Sea Naval Supremacy"
+ott.82.d:0 "'The Black Sea would storm / As it looked at the Turkish flag!' \nExpansion and modernisation of our naval bases on the Marmara and Black Sea coasts appear to have tipped the regional balance of power in our favor. As we now have a firm grip on their access to Mediterranean, other navies of the Black Sea are visibly bewildered; and the pair of 355mm Krupp guns we installed on Rumeli and Anadolu Hisarı just add insult to the injury."
+ott.82.a:0 "Give way to the flag of the Turk!"
+
+ott.83.t:0 "Eastern Mediterranean Naval Supremacy"
+ott.83.d:0 "Our new and expanded naval facilities in Beirut are now fully operational. Initial reactions from other navies of the region suggest they are well aware of our expanded area of influence. As we now have the initiative, we must not let it slip."
+ott.83.a:0 "Ah, those Mediterranean nights..."
+
+ott.84.t:0 "Gulf of Basra Naval Supremacy"
+ott.84.d:0 "Our expanded naval facilities in Basra and Kuwait are now operational. These ports are crucial for our oil trade, just as they were crucial for the spice trade in medieval times. Our solidified control is already causing quite a stir in the region."
+ott.84.a:0 "He who controls the oil, controls the world."
+
+ott.85.t:0 "The Sultan's Speech"
+ott.85.d:0 "His Majesty the Sultan [Root.GetLeader] delivered an Imperial Address in the Ottoman House of Commons today, recalling the events of the last decade and outlining his great plans for the future. The brief and eloquent speech had a spectacular effect on the multitude of state officials who had gathered to hear the Sultan speak - the several minutes of applause that followed the oration could be heard from across the Bosporus. In his magnificent 'Nutk-ı Hümayun', His Imperial Majesty had talked a great deal about many important subjects like democracy and the parliament, and yet nobody knew what exactly was on the Sultan's mind."
+ott.85.a:0 "A sign of great things to come"
+
+ott.86.t:0 "Ottoman Parliament Dissolved"
+ott.86.d:0 "At [GetDateText], soldiers entered the Cemile Sultan Palace to disband the Ottoman Parliament. Citing the Imperial Decree of Sultan [Root.GetLeader], Ottoman inzibat units ended the session by force, and all members of parliament were escorted outside the palace grounds. Another 'İrâde-i Seniyye' that went into effect an hour later effectively suspended the constitution and enforced a media blackout that aimed to suppress all information about the dissolvement of the Ottoman Chamber of Deputies. Nevertheless, the news quickly spread throughout the capital and the rest of the empire. Though many viewed this as an irrational and impulsive move on part of [GetDateText], some liberal groups were convinced that this was only the beginning of the end."
+ott.86.a:0 "No longer shall we suffer from two-headedness"
+
+ott.87.t:0 "Shut down the political parties?"
+ott.87.d:0 "Following the dissolvement of the Parliament, political parties of all ideologies began criticising the decision, with liberal ideologues even going so far as to call the Imperial Decrees 'tyrannical'. Opposition to the Sultan is growing day by day, and even the resident monarchists in the Selamet-i Osmaniye party are having a hard time defending the situation, and several spontaneous protests have materialized in the capital. Should we really allow these pesky agitators to roam free in the capital?"
+ott.87.a:0 "Proceed with the arrests of politicians"
+ott.87.b:0 "Allow them to exist and operate freely"
+
+ott.88.t:0 "Protesters gather in front of Dolmabahçe Palace"
+ott.88.d:0 "An angry crowd gathered in front of the Imperial Palace today, demanding that the government reinstate the constitution and the Chamber of Deputies. This may be the beginning of something bad..."
+ott.88.a:0 "Arrest these filthy marauders"
+ott.88.b:0 "Do nothing, they will give up eventually"
+
+ott.89.t:0 "The Beşiktaş Massacre"
+ott.89.d:0 "Attempts to arrest protesters and end the riots rapidly took a turn for the worse as an army patrol opened fire on hostile protesters in the Beşiktaş district of Istanbul late last night. Although the soldiers involved claim that they felt genuinely threatened and fired only when the mob advanced, the public is unlikely to believe their story."
+ott.89.a:0 "This does not bode well..."
+
+ott.90.t:0 "The New Reformers?"
+ott.90.d:0 "The massacre at Beşiktaş provoked a major outrage from the public. Following a series of threats from more extremist and disgruntled sectors of our society, major opposition parties, and also pressure from the army high command, the undersecretary of Ministry of the Interior proposed the reinstation of Constitution, and a major reshuffling of our government in order to appease the dissenters and maybe bring some stability back to the Empire. Shall we proceed?"
+ott.90.a:0 "What are you waiting for? Swear them in!"
+ott.90.b:0 "Supress the malcontents by force of arms!"
+
+ott.91.t:0 "Mob violence erupts in Kostantiniyye"
+ott.91.d:0 "General unrest has turned into rioting and mob rule in our capital! Various left-wing groups were spotted among the rioters as protesters started damaging public buildings and clashed with the security forces. As the initially civil protests quickly deteriorated into anarchy and vandalism, they began to lose their support among the conservative sections of the Ottoman public. Reports of drunk rebels loitering near the Dolmabahçe Palace and its attached Mosque were quickly publicised by pro-government newspapers."
+ott.91.a:0 "Those drunks entered the mosque with their shoes on!"
+
+ott.92.t:0 "Prince Sabahaddin Agitates!"
+ott.92.d:0 "Prince Mehmed Sabahaddin, leader of the Liberal Entente, has started organizing protests against what he calls 'The Tyranny of Absolute Rule'. A grandson of Abdülmecid I and related to the House of Osman through his mother, the veteran liberal politician is on the forefront of the opposition movement. It would be wise to drive him out of this country, if our reforms are to succeed..."
+ott.92.a:0 "Force him into exile!"
+ott.92.b:0 "Let him agitate"
+
+ott.93.t:0 "Organized Opposition"
+ott.93.d:0 "Opposition politicians appear to have succeeded in their coordinated efforts to deceive the Ottoman people about our latest leadership reforms, and as a result our popular support is lower than ever..."
+ott.93.a:0 "They will not halt our progress!"
+
+ott.94.t:0 "Protests calm down"
+ott.94.d:0 "Following several weeks of anarchy and rioting on the streets of Kostantiniyye, the protests eventually died down. While the damage to public buildings and services were minimal, the damage to the credibility of the protesters was immense. The conservative Ottoman public, always wary of chaos and instability, had chosen to side with the Sultan. As a new era dawned on The Ottoman Empire, Sultan [Root.GetLeader] stood strong with the support of the majority behind him."
+ott.94.a:0 "We will have order in our Empire!"
+
+ott.95.t:0 ""
+ott.95.d:0 ""
+ott.95.a:0 ""
+
+ott.96.t:0 ""
+ott.96.d:0 ""
+ott.96.a:0 ""
+
+ott.97.t:0 ""
+ott.97.d:0 ""
+ott.97.a:0 ""
+
+ott.98.t:0 ""
+ott.98.d:0 ""
+ott.98.a:0 ""
+
+ott.99.t:0 ""
+ott.99.d:0 ""
+ott.99.a:0 ""
+
+ott.100.t:0 ""
+ott.100.d:0 ""
+ott.100.a:0 ""
+
+ott.101.t:0 ""
+ott.101.d:0 ""
+ott.101.a:0 ""
+
+ott.102.t:0 ""
+ott.102.d:0 ""
+ott.102.a:0 ""
+
+ott.103.t:0 ""
+ott.103.d:0 ""
+ott.103.a:0 ""
+
+ott.104.t:0 ""
+ott.104.d:0 ""
+ott.104.a:0 ""
+
+ott.105.t:0 ""
+ott.105.d:0 ""
+ott.105.a:0 ""
+
+ott.106.t:0 ""
+ott.106.d:0 ""
+ott.106.a:0 ""
+
+ott.107.t:0 ""
+ott.107.d:0 ""
+ott.107.a:0 ""
+
+ott.108.t:0 ""
+ott.108.d:0 ""
+ott.108.a:0 ""
+
+ott.109.t:0 ""
+ott.109.d:0 ""
+ott.109.a:0 ""
+
+ott.110.t:0 ""
+ott.110.d:0 ""
+ott.110.a:0 ""
+
+ott.111.t:0 ""
+ott.111.d:0 ""
+ott.111.a:0 ""
+
+ott.112.t:0 ""
+ott.112.d:0 ""
+ott.112.a:0 ""
+
+ott.113.t:0 ""
+ott.113.d:0 ""
+ott.113.a:0 ""
+
+ott.114.t:0 ""
+ott.114.d:0 ""
+ott.114.a:0 ""
+
+ott.115.t:0 ""
+ott.115.d:0 ""
+ott.115.a:0 ""
+
+ott.116.t:0 ""
+ott.116.d:0 ""
+ott.116.a:0 ""
+
+ott.117.t:0 ""
+ott.117.d:0 ""
+ott.117.a:0 ""
+
+ott.118.t:0 ""
+ott.118.d:0 ""
+ott.118.a:0 ""
+
+ott.119.t:0 ""
+ott.119.d:0 ""
+ott.119.a:0 ""
+
+ott.120.t:0 ""
+ott.120.d:0 ""
+ott.120.a:0 ""
+
+ott.121.t:0 ""
+ott.121.d:0 ""
+ott.121.a:0 ""
+
+ott.122.t:0 ""
+ott.122.d:0 ""
+ott.122.a:0 ""
+
+ott.123.t:0 ""
+ott.123.d:0 ""
+ott.123.a:0 ""
+
+ott.124.t:0 ""
+ott.124.d:0 ""
+ott.124.a:0 ""
+
+ott.125.t:0 ""
+ott.125.d:0 ""
+ott.125.a:0 ""
+
+ott.126.t:0 ""
+ott.126.d:0 ""
+ott.126.a:0 ""
+
+ott.127.t:0 ""
+ott.127.d:0 ""
+ott.127.a:0 ""
+
+ott.128.t:0 ""
+ott.128.d:0 ""
+ott.128.a:0 ""
+
+ott.129.t:0 ""
+ott.129.d:0 ""
+ott.129.a:0 ""
+
+ott.130.t:0 ""
+ott.130.d:0 ""
+ott.130.a:0 ""
+
+ott.131.t:0 ""
+ott.131.d:0 ""
+ott.131.a:0 ""
+
+ott.132.t:0 ""
+ott.132.d:0 ""
+ott.132.a:0 ""
+
+ott.133.t:0 ""
+ott.133.d:0 ""
+ott.133.a:0 ""
+
+ott.134.t:0 ""
+ott.134.d:0 ""
+ott.134.a:0 ""
+
+ott.135.t:0 ""
+ott.135.d:0 ""
+ott.135.a:0 ""
+
+ott.136.t:0 ""
+ott.136.d:0 ""
+ott.136.a:0 ""
+
+ott.137.t:0 ""
+ott.137.d:0 ""
+ott.137.a:0 ""
+
+ott.138.t:0 ""
+ott.138.d:0 ""
+ott.138.a:0 ""
+
+ott.139.t:0 ""
+ott.139.d:0 ""
+ott.139.a:0 ""
+
+ott.140.t:0 ""
+ott.140.d:0 ""
+ott.140.a:0 ""
+
+ott.141.t:0 ""
+ott.141.d:0 ""
+ott.141.a:0 ""
+
+ott.142.t:0 ""
+ott.142.d:0 ""
+ott.142.a:0 ""
+
+ott.143.t:0 ""
+ott.143.d:0 ""
+ott.143.a:0 ""
+
+ott.144.t:0 ""
+ott.144.d:0 ""
+ott.144.a:0 ""
+
+ott.145.t:0 ""
+ott.145.d:0 ""
+ott.145.a:0 ""
+
+ott.146.t:0 ""
+ott.146.d:0 ""
+ott.146.a:0 ""
+
+ott.147.t:0 ""
+ott.147.d:0 ""
+ott.147.a:0 ""
+
+ott.148.t:0 ""
+ott.148.d:0 ""
+ott.148.a:0 ""
+
+ott.149.t:0 ""
+ott.149.d:0 ""
+ott.149.a:0 ""
+
+ott.150.t:0 ""
+ott.150.d:0 ""
+ott.150.a:0 ""
+
+ott.151.t:0 ""
+ott.151.d:0 ""
+ott.151.a:0 ""
+
+ott.152.t:0 ""
+ott.152.d:0 ""
+ott.152.a:0 ""
+
+ott.153.t:0 ""
+ott.153.d:0 ""
+ott.153.a:0 ""
+
+ott.154.t:0 ""
+ott.154.d:0 ""
+ott.154.a:0 ""
+
+ott.155.t:0 ""
+ott.155.d:0 ""
+ott.155.a:0 ""
+
+ott.156.t:0 ""
+ott.156.d:0 ""
+ott.156.a:0 ""
+
+ott.157.t:0 ""
+ott.157.d:0 ""
+ott.157.a:0 ""
+
+ott.158.t:0 ""
+ott.158.d:0 ""
+ott.158.a:0 ""
+
+ott.159.t:0 ""
+ott.159.d:0 ""
+ott.159.a:0 ""
+
+ott.160.t:0 ""
+ott.160.d:0 ""
+ott.160.a:0 ""
+
+ott.161.t:0 ""
+ott.161.d:0 ""
+ott.161.a:0 ""
+
+ott.162.t:0 ""
+ott.162.d:0 ""
+ott.162.a:0 ""
+
+ott.163.t:0 ""
+ott.163.d:0 ""
+ott.163.a:0 ""
+
+ott.164.t:0 ""
+ott.164.d:0 ""
+ott.164.a:0 ""
+
+ott.165.t:0 ""
+ott.165.d:0 ""
+ott.165.a:0 ""
+
+ott.166.t:0 ""
+ott.166.d:0 ""
+ott.166.a:0 ""
+
+ott.167.t:0 ""
+ott.167.d:0 ""
+ott.167.a:0 ""
+
+ott.168.t:0 ""
+ott.168.d:0 ""
+ott.168.a:0 ""
+
+ott.169.t:0 ""
+ott.169.d:0 ""
+ott.169.a:0 ""
+
+ott.170.t:0 ""
+ott.170.d:0 ""
+ott.170.a:0 ""
+
+ott.171.t:0 ""
+ott.171.d:0 ""
+ott.171.a:0 ""
+
+ott.172.t:0 ""
+ott.172.d:0 ""
+ott.172.a:0 ""
+
+ott.173.t:0 ""
+ott.173.d:0 ""
+ott.173.a:0 ""
+
+ott.174.t:0 ""
+ott.174.d:0 ""
+ott.174.a:0 ""
+
+ott.175.t:0 ""
+ott.175.d:0 ""
+ott.175.a:0 ""
+
+ott.176.t:0 ""
+ott.176.d:0 ""
+ott.176.a:0 ""
+
+ott.177.t:0 ""
+ott.177.d:0 ""
+ott.177.a:0 ""
