updated for DEH's cosmetic tag

--- a/localisation/KR_Countries_Cosmetic_l_english.yml
+++ b/localisation/KR_Countries_Cosmetic_l_english.yml
@@ -66,6 +66,34 @@ IND_EMP_totalist:0 "Indian Empire"
 IND_EMP_totalist_ADJ:0 "Indian"
 IND_EMP_totalist_DEF:0 "The Indian Empire"
 
+DEH_IND_market_liberalist:0 "India"
+DEH_IND_market_liberalist_ADJ:0 "Indian"
+DEH_IND_market_liberalist_DEF:0 "India"
+DEH_IND_national_populist:0 "India"	
+DEH_IND_national_populist_ADJ:0 "Indian"
+DEH_IND_national_populist_DEF:0 "India"
+DEH_IND_paternal_autocratist:0 "India"
+DEH_IND_paternal_autocratist_ADJ:0 "Indian"
+DEH_IND_paternal_autocratist_DEF:0 "India"
+DEH_IND_radical_socialist:0 "India"
+DEH_IND_radical_socialist_ADJ:0 "Indian"
+DEH_IND_radical_socialist_DEF:0 "India"
+DEH_IND_social_conservatist:0 "India"
+DEH_IND_social_conservatist_ADJ:0 "Indian"
+DEH_IND_social_conservatist_DEF:0 "India"
+DEH_IND_social_democratist:0 "India"
+DEH_IND_social_democratist_ADJ:0 "Indian"
+DEH_IND_social_democratist_DEF:0 "India"
+DEH_IND_social_liberalist:0 "India"
+DEH_IND_social_liberalist_ADJ:0 "Indian"
+DEH_IND_social_liberalist_DEF:0 "India"
+DEH_IND_authoritarian_democrat:0 "India"
+DEH_IND_authoritarian_democrat_ADJ:0 "Indian"
+DEH_IND_authoritarian_democrat_DEF:0 "India"
+DEH_IND_totalist:0 "India"
+DEH_IND_totalist_ADJ:0 "Indian"
+DEH_IND_totalist_DEF:0 "India"
+
 IND_market_liberalist:0 "India"
 IND_market_liberalist_ADJ:0 "Indian"
 IND_market_liberalist_DEF:0 "India"
