--- a/localisation/KR_Ottoman_l_english.yml
+++ b/localisation/KR_Ottoman_l_english.yml
@@ -639,7 +639,7 @@ ott.86.d:0 "At [GetDateText], soldiers entered the Cemile Sultan Palace to disba
 ott.86.a:0 "No longer shall we suffer from two-headedness"
 
 ott.87.t:0 "Shut down the political parties?"
-ott.87.d:0 "Following the dissolvement of the Parliament, political parties of all ideologies began criticising the decision, with liberal ideologues even going so far as to call the Imperial Decrees 'tyrannical'. Opposition to the Sultan is growing day by day, and even the resident monarchists in the Selamet-i Osmaniye party are having a hard time defending the situation, and several spontaneous protests have materialized in the capital. Should we really allow these pesky agitators to roam free in the capital?"
+ott.87.d:0 "Following the dissolvement of the Parliament, political parties of all ideologies began criticising the decision, with liberal ideologues even going so far as to call the Imperial Decrees 'tyrannical'. Opposition to the Sultan is growing day by day, and even the resident monarchists in the Selamet-i Osmaniye Party are having a hard time defending the situation, meanwhile several spontaneous protests have materialized in the capital. Should we really allow these pesky agitators to roam free in the city?"
 ott.87.a:0 "Proceed with the arrests of politicians"
 ott.87.b:0 "Allow them to exist and operate freely"
 
