some more Delhi events

--- a/localisation/KR_Dominion_of_India_l_english.yml
+++ b/localisation/KR_Dominion_of_India_l_english.yml
@@ -36,6 +36,13 @@ DEH_PRF_convert_faster:0 "Cores will be gained on the §Y[PRF.GetName]§!'s stat
 DEH_PRF_convert_slower:0 "Cores will be gained on the §Y[PRF.GetName]§!'s states more slowly\n"
 DEH_all_india_owned:0 "Owns all core states of the §Y[DEH.GetName]§!, §Y[PRF.GetName]§! and §Y[BHC.GetName]§!\n"
 DEH_all_india_cored:0 "All core states of the §Y[PRF.GetName]§! and §Y[BHC.GetName]§! are now core states of the §Y[DEH.GetName]§!\n"
+DEH_PRF_war:0 "War between [DEH.GetNameDef] and [PRF.GetNameDef]"
+DEH_PRF_war_declined:0 "[DEH.GetNameDef] declined to invade [PRF.GetNameDef]"
+DEH_BHC_war:0 "War between [DEH.GetNameDef] and [BHC.GetNameDef]"
+DEH_BHC_war_declined:0 "[DEH.GetNameDef] declined to invade [BHC.GetNameDef]"
+BHC_PRF_war:0 "War between [BHC.GetNameDef] and [PRF.GetNameDef]"
+DEH_becomes_india:0 "§Y[DEH.GetNameDef]§! will become §YIndia§!\n"
+DEH_released_BUR:0 "Released Burma"
 
 ### Ideas ###
 DEH_princely_power:0 "Power of the Princes"
@@ -284,6 +291,16 @@ delhi.13.d:0 "Now that our opponents have been destroyed, we can turn to returni
 delhi.13.a:0 "Have a series of 5 year plans dictate the economy!"
 delhi.13.b:0 "Enact a balanced system where the government can intervene if necessary!"
 delhi.13.c:0 "A free market for a free people!"
+
+delhi.20.t:0 "The Second Betrayal of the Princes"
+delhi.20.d:0 "Osman Ali Khan’s autocratic ambitions and hubris have finally driven the southern princes into open revolt! For the second time in a decade, the Hindu rulers of Mysore and Travancore waver in their oaths of loyalty towards their nominal overlord. Kannada and Malayalam troops already openly engage army units loyal to the Hyderabad government whilst the federal apparatus of state in the south has been thrown into absolute disarray. Consequently, with the Nizam’s administration barely clinging onto power in the Deccan Plateau, intervention by Dominion forces could result in the complete disintegration of one of the two other rival governments. However, such an attack could be risky, given the fragile balance of power between the three successor states to the Raj."
+delhi.20.a:0 "This is our time, strike against the mad Nizam!"
+delhi.20.b:0 "This is no business of ours..."
+delhi.21.t:0 "The Burmese Question"
+delhi.21.d:0 "A successor state to the late British Raj, Burma's recent history has been troubled. Destabilized by internal friction against the Konbaung dynasty and exploitation of the nascent oil industry, the Burmese have now been freed of the hassle of running their own country by our victorious troops. However, Burma was only a loosely integrated part of the Raj - and some officials within our own government strongly disagree with outrightly annexing the Burmese districts, instead advocating the creation of a nominal independent Burma - under the benevolent guidance of our own government of course."
+delhi.21.a:0 "Restore an independent Burma"
+delhi.21.b:0 "Integrate the Burmese districts into our state"
+delhi.21.c:0 "Restore the Konbaung dynasty!"
 
 delhi.100.t:0 "The Case of the Princely Armies"
 delhi.100.d:0 "Besides retaining informal sovereignty during the paramountcy of the British Raj, the Princely States also fielded their own private armies, ranging in size from mere regiments to several battalions of infantry, cavalry and artillery. Now, with our new government already having decided on the internal status the Princely remnants, the lingering question of what to do with their armies finally surfaces. Some argue that the Princes retain nominal control over the forces in question while at the same time expanding their ranks in order to keep them up to date with the regular state forces. Others believe it is time to bring the princely troops directly and unequivocally under the control of parliament as equal units to the standard army divisions. At the same time a minority of reactionary maharajas and feudal landowners advocate a maintaining of the status quo, although this approach is highly unpopular."
