Localization, some fixes.

--- a/localisation/KR_Fengtian_l_english.yml
+++ b/localisation/KR_Fengtian_l_english.yml
@@ -93,7 +93,7 @@ FNG_The_Soy_Agricultural_Initiative_desc:0 "Fengtian's significant Korean minori
 FNG_Japanese_Electrical_Expertise:0 "Japanese Electrical Expertise"
 FNG_Japanese_Electrical_Expertise_desc:0 "Thanks to China's backwardness over the past century, and the chaos of the past two decades, the country has few native engineers. Japanese assistance will be essential in bringing modernity to Manchuria."
 FNG_Mantetsu_Research_Wing:0 "Mantetsu Research Wing"
-FNG_Mantetsu_Research_Wing_desc:0 "Mantetsu's Research Wing, known as 'Mantetsu Chosabu', serves as the centrepiece of Japan's colonial program, and pursues a wide variety of scientific goals. Its massive funding and talent pool could be of great use to us in our own efforts."
+FNG_Mantetsu_Research_Wing_desc:0 "Mantetsu's Research Wing, known as 'Mantetsu Chōsabu', serves as the centrepiece of Japan's colonial program, and pursues a wide variety of scientific goals. Its massive funding and talent pool could be of great use to us in our own efforts."
 FNG_Mantetsu_Civil_Engineering_Projects:0 "Mantetsu Civil Engineering Projects"
 FNG_Mantetsu_Civil_Engineering_Projects_desc:0 "While the Japanese have much to benefit directly from large civil engineering projects in Fengtian, they also do so indirectly by helping to present our regime as successful at improving the everyday lives of citizens. In this respect, our interests are mutually shared."
 #Crossover Section
@@ -612,6 +612,32 @@ fengtian.new.45.b:0 "We cannot afford this"
 fengtian.new.46.t:0 "The Drought Ends"
 fengtian.new.46.d:0 "After months of hardship, the drought in Korea and Japan has ended."
 fengtian.new.46.a:0 "Finally!"
+#Hokkaido Farming#
+fengtian.new.47.t:0 "A Proposal from Mantetsu"
+fengtian.new.47.d:0 "A representative from Mantetsu's Research Wing has come forward with a proposal, the acceptance of which he assures the government is in its best interest, but which he insists must be kept completely secret. Apparently, following the Drought of 1939, Mantetsu brought together farming experts, senior officials from agricultural organizations, and academic scholars with relevant expertise in order to lead an initiative with the aim of improving agricultural efficiency and production in Fengtian. After months of testing, one of several research teams created a solution based upon farming methods used in Hokkaido, which might allow the average Chinese family to farm ten entire hectares of land without needing to hire seasonal workers, thus improving production and freeing up labor for factories in Anshan, Fushun, and Mukden. The Mantetsu official indicates that these methods should be spread through the dissemination of informational leaflets and Chinese indstructors, themselves trained by Japanese experts, and he seemed to stress the idea that this project should be disassociated in every possible way from the South Manchurian Railway. \n\n After some investigation, the Army's intelligence section has determined that the Kwantung Army refused to support Mantetsu's efforts for unclear reasons, suggesting that the two factions may be competing, or that this is simply a part of some elaborate Japanese ruse. The relatively liberal officials in Mantetsu's research wing and other bureaucratic roles have been known to clash with the conservative Kwantung Army."
+fengtian.new.47.a:0 "Accept the proposal"
+fengtian.new.47.b:0 "Refuse the proposal"
+
+fengtian.new.48.t:0 "Hokkaido Farming Bears Fruit"
+fengtian.new.48.d:0 "After much time and effort, the Hokkaido farming methods proposed by Mantetsu seem to be bearing fruit in some areas, increasing production, and freeing up additional land in the north."
+fengtian.new.48.a:0 "Excellent"
+
+fengtian.new.49.t:0 "Discovery"
+fengtian.new.49.d:0 "Although neither made any public announcement, Mantetsu's research wing has communicated that the Kwantung Army discovered its farming collaboration with our government, a claim backed up by findings from our intelligence services. General Kekichi Ueda himself is said to have stormed into the office of the Mantetsu president, Yosuke Matsuoka, and delivered a thunderous verbal barrage regarding the necessity to keep Fengtian dependent upon Japanese aid. The Kwantung Army's ability to punish Mantetsu is ultimately limited, as the powerful company is practically autonomous, but there's little doubt that the Army will go out of its way to make things difficult for everyone involved. Unfortunately, this will certainly be the end of this specific collaboration project with Mantetsu."
+fengtian.new.49.a:0 "Unfortunate"
+
+fengtian.new.50.t:0 "Discovery"
+fengtian.new.50.d:0 "Dr Y.C. James Yen, the leader of the Rural Reconstruction Movement, today denounced our collaboration with Mantetsu to bring Hokkaido farming styles to Fengtian, declaring that 'China must reform itself' and not submit to 'forced restructuring disguised as collaborative reform'. Our legitimacy in the eyes of the Chinese people will almost certainly be impacted severely by this turn of events. Some ministers suggest that we might defend our collaboration, painting it as an instance in which we are able to manipulate Mantetsu, instead of the other way around. Others suggest that this may simply dig our hole deeper."
+fengtian.new.50.a:0 "Guilty as charged"
+fengtian.new.50.b:0 "Our actions were legitimate!"
+
+fengtian.new.51.t:0 "Popular Opinion Shifts in our Favour"
+fengtian.new.51.d:0 "Against what seemed to be all odds, the government's defense of the Hokkaido farming project seems to have convinced not only Dr Yen, but also the vast majority of the population. The impact has been mitigated, and the program can continue uninterrupted."
+fengtian.new.51.a:0 "Wonderful news!"
+
+fengtian.new.52.t:0 "The Public is Incensed!"
+fengtian.new.52.d:0 "Despite our beste efforts, both Dr Yen and the general public seem unconvinced by our defense of the Hokkaido Farming project. As a result, the program will almost certainly grind to a halt, and the government's credibility has dwindled significantly."
+fengtian.new.52.a:0 "Damn!"
 
 ### Informal Empire Mechanic ###
 fengtian.informalempire.1.t:0 "Expel the Japanese Bandits!"
