almost done with Delhi events

--- a/localisation/KR_Dominion_of_India_l_english.yml
+++ b/localisation/KR_Dominion_of_India_l_english.yml
@@ -24,7 +24,7 @@ DEH_national_populist_party_long:0 "Imperial Sympathisers"
 
 ### Tooltips ###
 DEH_ISAC_has_formed:0 "§Y[CAN.GetName]§! has formed the ISAC\n"
-DEH_1936_election:0 "1936 election has been held"
+DEH_1936_election:0 "1936 election has been held\n"
 DEH_PRF_cores_1:0 "May now gain cores in §YBombay§! and §YAndhra§!\n"
 DEH_PRF_cores_2:0 "May now gain cores in §Y[PRF.GetName]§!'s princely states\n"
 DEH_BHC_cores_1:0 "May now gain cores in §YWest Bengal§!, §YEast Bengal§!, and §YBihar§!\n"
@@ -166,12 +166,12 @@ DEH_invadeBHC:0 "Invade the Syndicalists!"
 DEH_invadeBHC_desc:0 "The Syndicalists to the East have too long been a threat. We must strike preemptively, with the element of surprise!"
 DEH_revoltBHC:0 "Incite Rebellion in the East!"
 DEH_revoltBHC_desc:0 "Our intelligence services have kept in contact with loyalist rebels hiding in the foothills of the Himalayas. We should reach out them and have them stage a revolt in Assam, to free up our troops in the west."
-DEH_BHC_revolters:0 "An uprising erupts in Assam!"
-DEH_invadePRF:0 "Destroy the Southern Traitors! Jai Hind!"
+DEH_BHC_revolters:0 "An uprising erupts in Assam!\n"
+DEH_invadePRF:0 "Destroy the Southern Traitors!"
 DEH_invadePRF_desc:0 "The so-called 'Princely Federation' to the south is nothing but a nest of separatists traitors. We must crush them!"
 DEH_revoltPRF:0 "Incite Rebellion in the South!"
 DEH_revoltPRF:0 "The new Maharaja of Cochin has Imperial loyalties. If we could convince him to join us it would free up our troops to attack from the north, while Princely troops try to suppress his rebellion."
-DEH_PRF_revolters:0 "The Maharaja of Cochin Revolts!"
+DEH_PRF_revolters:0 "The Maharaja of Cochin Revolts!\n"
 DEH_unifyindia:0 "Unify India!"
 DEH_unifyindia_desc:0 "Jai Hind! The subcontinent is once again ours! Now what?"
 DEH_bhutan:0 "Claim Tawang"
@@ -180,8 +180,8 @@ DEH_nepal:0 "Our Claims Against Nepal"
 DEH_nepal_desc:0 "Nepal expanded into the Indian lowlands in the chaos following the Weltkrieg. It is time to reassert our domain over those territories."
 DEH_madras:0 "The Deccan States"
 DEH_madras_desc:0 "The nations of southern India must either join India willingly or be conquered - the choice is theirs."
-DEH_siam:0 "Incorporating Siam"
-DEH_siam_desc:0 "Our nation's ambitions extend to expanding past the borders of Burma. The Siamese must become part of our Federation, whether they agree or not."
+DEH_siam:0 "The Burmese Territories in Siam"
+DEH_siam_desc:0 "The Siamese Kingdom was one of the more opportunistic of the 'Vulture States' that exploited the disorder of the Raj's demise. With the young Burmese nation hard-pressed by the socialist uprisings in Assam and Bengal, the government of Siam simply occupied several districts and prefectures, including the city of Moulmein - mentioned in Kipling's famous poem. These lands must be returned!"
 DEH_goa:0 "Claim Goa"
 DEH_goa_desc:0 "The enclave of Goa is nothing more than a burr on the side of our proud nation. It is rightfully our territory, and must be returned."v
 DEH_ceylon:0 "Claim Ceylon"
@@ -314,19 +314,40 @@ delhi.101.a:0 "To war! We must liberate the oppressed!"
 delhi.101.b:0 "Launch covert actions to take control of their government!"
 delhi.101.c:0 "Who cares?"
 
-delhi.106.t:0 "Siam"
-delhi.106.d:0 "Siam still remains outside our sphere of influence. However, they are likely to be under heavy Japanese influence, which might bring Japan into a war."
-delhi.106.a:0 "Just attack them, Japanese be damned!"
-delhi.106.b:0 "Try to influence them, maybe the Japanese won't notice..."
-delhi.106.c:0 "This isn't worth the effort."
+delhi.106.t:0 "[From.GetNameDef] Demands Our Burmese Districts"
+delhi.106.d:0 "The cursed [From.GetAdjective] government is demanding the return of the Burmese territory we 'pacified' during the Raj's collapse. This is a shamefull dispray of bad manners!"
+delhi.106.a:0 "It's no use fighting over these useless provinces"
+delhi.106.b:0 "We know of no 'Burmese' districts, this is Siam - one and indivisible!"
+delhi.106.c:0 "Rally our allies to our defence!"
+delhi.106.e:0 "Rally our overlord to our defence!"
+delhi.107.t:0 "[From.GetName] Submits"
+delhi.107.d:0 "The [From.GetAdjective] government has wisely caved to our demands and returned all occupied Burmese territory."
+delhi.107.a:0 "A wise move"
+delhi.108.t:0 "Our Demands for [From.GetAdjective] Burma are Refused"
+delhi.108.d:0 "The very reasonable demands presented by our envoy to the [From.GetAdjective] government have been completely rejected! We now have to choose whether or not to force our claims through by military might or suffer a diplomatic defeat both domestically and internationally. The eyes of the entire country are upon our cabinet!"
+delhi.108.a:0 "Then we shall liberate the Malay Peninsula by force!"
+delhi.108.b:0 "Swallow our pride and renege on our claims"
+delhi.109.t:0 "[demand_country.GetName] Menaces [From.GetNameDef]"
+delhi.109.d:0 "A resurgent [demand_country.GetAdjective] government is pushing for a revision of the border between their Burmese provinces and those of our [From.GetAdjective] allies. This is a difficult situation given the fact that the areas occupied by [From.GetNameDef] were taken by force, but it wouldn't be cricket to abbandon our allies in Indochina..."
+delhi.109.a:0 "Declare our solidarity with our allies in Bangkok!"
+delhi.109.b:0 "Pressure the Siamese to cede the disputed districts"
+delhi.110.t:0 "[From.GetName] Defends [SIA.GetNameDef]"
+delhi.110.d:0 "Curses! The cowardly Siamese have hid under the skirts of their [From.GetAdjective] allies. What we thought to have been a simple revision of an illegal occupation has turned into an international conflict! This might be a bit more than we asked for, but the repercussions of giving up our claims would be disastrous as well."
+delhi.110.a:0 "Then we shall liberate the Malay Peninsula by force!"
+delhi.110.b:0 "Such a war would only bring chaos to all of Asia..."
+delhi.111.t:0 "[From.GetNameDef] Has Betrayed Us!"
+delhi.111.d:0 "The [From.GetAdjective] has sent a message saying they have no intention of defending us from [demand_country.GetNameDef]'s demands, considering we acquired the territory by force to begin with. They sternly suggest we return the Burmese lands as requested."
+delhi.111.a:0 "Then we shall fight these aggressors on our own!"
+delhi.111.b:0 "Secede the disputed territories"
 
-delhi.107.t:0 "Siam Submits"
-delhi.107.d:0 "Siam has submitted to our ultimatum."
-delhi.107.a:0 "Another victory for our diplomacy!"
+delhi.115.t:0 "Elections for Parliament, [GetYear]"
+delhi.115.d:0 "It has been four years since the last democratic elections took place in our fair state. From the mouth of the Indus to the peaks of the Himalayas our trusted officials and commissioners are busy erecting voting booths for the millions of honest Indians that certainly will do their democratic duty and participate in the election. Campaigns have been fought and speeches held and the parties of democratic India eagerly await the results."
+delhi.115.a:0 "The Indian Liberal Party scores a landslide!"
+delhi.115.b:0 "The Swaraj Party carries the day!"
+delhi.115.c:0 "The leftist Home Rule Party sweeps into parliament!"
+delhi.115.e:0 "The farmer-gentry alliance of the Unionist Party triumphs!"
 
-delhi.108.t:0 "Siam Attacks!"
-delhi.108.d:0 "Siam has refused our ultimatum, and attacked!"
-delhi.108.a:0 "Curses!"
+
 
 delhi.150.t:0 "Death of Sir Sikander Hayat Khan"
 delhi.150.d:0 "One of the greatest statesmen of India, Sir Sikander Hayat Khan, passed away last night at his home in Multan, the Punjab. A great leader and politician, Hayat Khan had led the Unionist Party for several years and campaigned vigorously for the conservative ideals of his party. He is succeeded as chairman by the popular Jat leader, Sir Chhotu Ram."
@@ -451,3 +472,30 @@ delhi.311.d:0 "France had been the only major rival to Britain's colonial ambiti
 delhi.311.a:0 "We can afford our French friends some special rights"
 delhi.311.b:0 "Merge the concessions into proper Indian states"
 delhi.311.c:0 "Ban all French institutions and enforce Indian values!"
+delhi.312.t:0 "The Delhi Government Unites India"
+delhi.312.d:0 "Our stalwart allies in Delhi have vanquished their enemies on the sub-continent. We should return the provinces under our control to them."
+delhi.312.a:0 "Return the provinces"
+delhi.312.b:0 "I think not"
+delhi.313.t:0 "Dealing With the Syndicalist Sanctuaries in Burma"
+delhi.313.d:0 "Burma broke away from the Raj in the chaos of 1925, re-establishing the Konbaung dynasty on the throne in Rangoon. Strikes by oil workers and students resulted in a violent revolution culminating in the proclamation of a leftist republic in 1937, heavily influenced by the Calcutta Government. This influence has also meant that a large number of Syndicalists have sought refuge in Burma, wherefrom they continue to wage a deadly guerrilla war on our military and constabulary in Assam as well as in the Bengal. If we wish to completely crush militant Socialism in South-East Asia, we must eliminate the Burmese support for these fanatics - in effect meaning that we must enforce some sort of regime change in Rangoon. However, how to do this is still debated heavily within the cabinet."
+delhi.313.a:0 "Send in troops to smoke out the Red Army remnants!"
+delhi.313.b:0 "They'll get bored of running around in the jungle eventually..."
+delhi.314.t:0 "Indian Military Operations in Burma!"
+delhi.314.d:0 "Indian troops have crossed the border in order to destroy the bases of the defeated Calcutta Government's Red Army. How should we react?"
+delhi.314.a:0 "How dare they! retaliate in kind!"
+delhi.314.b:0 "The Red Army guerillas are on their own!"
+delhi.315.t:0 "Anti-Partisan Actions in Burma Succeed"
+delhi.315.d:0 "The lack of active Burmese support has resulted in our troops successfully destroying the training bases of the remaining Red Army units. Better still, Rangoon’s inactivity has caused quite a lot of domestic unrest in Burma, which we could utilize to install a more moderate government."
+delhi.315.a:0 "Use the momentum to support a coup in Rangoon!"
+delhi.315.b:0 "Pull back the troops to Assam"
+delhi.316.t:0 "Anti-Socialist Coup"
+delhi.316.d:0 "The weakness of our government has provoked a clique of reactionary army officers to attempt a coup."
+delhi.316.a:0 "It's the Indians meddling again, isn't it?"
+delhi.317.t:0 "Regime Change in Rangoon"
+delhi.317.d:0 "The weakness of the Burmese government has provoked a clique of reactionary army officers to seize the government. Given our tacit support, the new cabinet has expressed interest in a much closer Indo-Burmese cooperation."
+delhi.317.a:0 "Bring them in under our sphere of influence!"
+delhi.317.b:0 "Establish cordial relations with the new government"
+delhi.318.t:0 "Anti-Socialist Coup Fails"
+delhi.318.d:0 "An attempted coup by a group of Burmese army officers has been crushed by the incumbent government, despite our tacit support. Since we still have troops present in Western Burma, we could utilize the chaos to forcibly remove the leftist menance from Rangoon."
+delhi.318.a:0 "Then we must oust the leftist threat by force!"
+delhi.318.b:0 "Too bad"
