--- a/localisation/KR_Princely_Federation_l_english.yml
+++ b/localisation/KR_Princely_Federation_l_english.yml
@@ -225,8 +225,8 @@ PRF_incorporate_burma:0 "Incorporating Burma"
 PRF_incorporate_burma_desc:0 "The eastern realm of Burma was once part of the Raj, and the time has come to incorporate it into our expanding realm."
 PRF_claim_goa:0 "Claim Goa"
 PRF_claim_goa_desc:0 "The enclave of Goa is nothing more than a burr on the side of our proud nation. It is rightfully our territory, and must be returned."
-PRF_incorporate_siam:0 "Incorporating Siam"
-PRF_incorporate_siam_desc:0 "Our nation's ambitions extend to expanding past the borders of Burma. The Siamese must become part of our Federation, whether they agree or not."
+PRF_incorporate_siam:0 "The Burmese Territories in Siam"
+PRF_incorporate_siam_desc:0 "The Siamese Kingdom was one of the more opportunistic of the 'Vulture States' that exploited the disorder of the Raj's demise. With the young Burmese nation hard-pressed by the socialist uprisings in Assam and Bengal, the government of Siam simply occupied several districts and prefectures, including the city of Moulmein - mentioned in Kipling's famous poem. These lands must be returned!"
 PRF_new_plan:0 "The New India Act"
 PRF_new_plan_desc:0 "With common rule over the conquered territories established, the time has come to pass reforms to ensure all of India works together as we stride into the future."
 PRF_indian_cinema:0 "Indian Cinema: Propaganda Machine?"
