New Siamese Syndie flags

--- a/localisation/KR_Loading_Tips_l_english.yml
+++ b/localisation/KR_Loading_Tips_l_english.yml
@@ -117,3 +117,4 @@ LOADING_TIP_112:0 "The only thing you learn from history is that no one learns a
 LOADING_TIP_113:0 "When we want an airplane, we get an airplane, when we want an artillery piece, we get an artillery piece; whatever we ask for we get from Japan. \n- Zhang Zuolin"
 LOADING_TIP_114:0 "Why do I hate the communists? These devils? They killed my son and burned my house...They must be burned at the stakes... \n- Boris Savinkov, The Black Horse"
 LOADING_TIP_115:0 "We captured Moscow at the dawn. We won. But I don't feel joy and rapture. Because the Russians defeated the Russians. \n- Boris Savinkov, The Black Horse"
+LOADING_TIP_116:0 "There is nothing under the sun that the Siamese police cannot do. \n- Phao Sriyanond"
